objects/Asset/fields/Equipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Number__c</fullName>
    <externalId>true</externalId>
    <label>Equipment Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>