objects/Asset/fields/Hauler__c.field-meta.xml
<CustomField>
    <fullName>Hauler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hauler</label>
    <type>Checkbox</type>
</CustomField>