objects/Asset/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <length>80</length>
    <type>Text</type>
</CustomField>