objects/Asset/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>