objects/Asset/fields/Number_of_Axles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Axles__c</fullName>
    <label>Number of Axles</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>