objects/Asset/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>